--- a/spark/master/spark-mainbee-ssh-service.yaml
+++ b/spark/master/spark-mainbee-ssh-service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: death-star-ui
+  name: death-star-ssh-service
 spec:
   type: LoadBalancer
+  ports:
+  - port: 8083
+    name: ssh
   selector:
     app: death-star
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 8080
