add scala jupyter

--- a/spark/worker/spark-worker-statefulset.yaml
+++ b/spark/worker/spark-worker-statefulset.yaml
@@ -17,7 +17,8 @@ spec:
     spec:
       containers:
       - name: spark-worker
-        image: apache/spark:3.4.1
+        image: spark-w-kafka:latest
+        imagePullPolicy: Never
         resources:
           requests:
             cpu: "2"
